--- a/style.css
+++ b/style.css
@@ -67,10 +67,10 @@ footer a {
     color: #024e76;
 }
 
-section {
+/*section {
     padding: 60px;
     background-image: url("../run-buddy/assets/images/hero-bg.jpg");
-}
+}*/
 
 /* Hero style start*/
 .hero {
