--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,7 +74,7 @@ footer a {
 
 /* Hero style start*/
 .hero {
-    background-image: url("../run-buddy/assets/images/hero-bg.jpg");
+    background-image: url("../images/hero-bg.jpg");
     height: 600px;
     background-size: cover;
     background-position: center;
@@ -287,3 +287,13 @@ footer a {
 }
 
 /* Reach out styles end*/
+
+.page-title {
+    color: #fce138;
+    display: inline-block;
+    border-bottom: 4px solid #fce138;
+    padding: 0 80px 15px 80px;
+    font-weight: normal;
+    font-size: 42px;
+    font-style: italic;
+}
