--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,7 @@ header nav ul li a {
     font-size: 22px;
 }
 
+/*
 section {
     padding: 60px;
     background-image: url("../run-buddy/assets/images/hero-bg.jpg");
