update privacy policy

--- a/assets/css/secondary-styles.css
+++ b/assets/css/secondary-styles.css
@@ -18,12 +18,12 @@
 
 article {
     width: 80%;
-    margin: center;
+    margin: auto;
     color: #024e76;
 }
 
 h3 {
-    font-size: 2px;
+    font-size: 25px;
     margin: 20px 0 20px 0;
 }
 
