--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,7 +44,7 @@ header nav ul {
 }
 
 header nav ul li a {
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -63,6 +63,7 @@ section {
     display: flex;
     justify-content: cneter;
     flex-wrap: wrap; 
+    align-items: flex-start;
 }
 
 .hero-cta { 
@@ -72,6 +73,7 @@ section {
     color: #fff;
     font-size: 18px;
     line-height: 1.3;
+    line-height: 1.2;
 }
 
 .hero-cta h2 {
@@ -143,7 +145,7 @@ section {
 /*steps*/
 
 .section-title {
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     border-bottom: 3px solid;
     padding-bottom: 20px;
@@ -353,4 +355,20 @@ footer a {
 
 .flex-row {
     display: flex;
+}
+
+/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+@media screen and (max-width: 980px) {
+
+    
+}
+
+/* MEDIA QUERY FOR TABLETS AND SMALLER */
+@media screen and (max-width: 768px) {
+   
+}
+
+/* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+@media screen and (max-width: 575px) {
+    
 }
