add pseudo classes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,14 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-image: url("../images/hero-bg.jpg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-position: 80%;
 }
     
 header h1 {
@@ -24,6 +32,7 @@ header h1 {
     font-size: 36px;
     color: #fce138;
     margin: 0;
+    text-shadow: 0 0 10 px rgba(0, 0, 0, 0.5);
 }
 
 header a {
@@ -47,7 +56,15 @@ header nav ul li a {
     margin: 0 30px;
     font-weight: lighter;
     font-size: 1.55vw;
+    text-shadow: 0 0 10 px rgba(0, 0, 0, 0.5);
 }
+
+header nav ul li a:hover {
+    background: #fce138;
+    color: #024e76;
+    border-radius: 15px;
+    text-shadow: none;
+  }
 
 /*
 section {
@@ -63,6 +80,7 @@ section {
     display: flex;
     justify-content: center;
     flex-wrap: wrap; 
+    
 }
 
 .hero-cta { 
@@ -78,15 +96,18 @@ section {
     font-style: italic;
     font-size: 55px;
     color: #fce238;
+    text-shadow: 0 0 10 px rgba(0, 0, 0, 0.5);
 }
 
 .hero-form{
     border: 3px solid #024e76;
-    background-color: #fce138;
+    background-color: rgb(252, 225, 56, 0.8);
     padding: 20px;
     color: #024e76;
     width: 40%;
     margin: 3.5%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
 }
 
 .hero-form h3 {
@@ -106,7 +127,14 @@ section {
     color: #024e76;
     width: 100%;
     margin-bottom: 15px;
+    border-radius: 10px;
+    background-color: rgba(255,255,255, 0.75)
 }
+
+.form-input:focus {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
+  }
 
 .hero-form label {
     margin: 0 5px;
@@ -118,7 +146,12 @@ section {
     border: none;
     padding: 10px 20px;
     font-size: 16px;
+    border-radius: 10px;
 }
+
+.hero-form button:hover {
+    background-color: #39a6b2;  
+  }
 /*Hero style end*/
 
 /*what we do*/
@@ -164,12 +197,24 @@ section {
     margin: 50px auto;
     padding-bottom: 50px;
     width: 80%;
-    border-bottom: 1px solid #39a6b2;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
+    border-bottom: 1px solid #39a6b2;
 }
+
+.step:nth-child(even) {
+    border-bottom: 1px solid #39a6b2;
+  }
+
+.step:last-child {
+    border-bottom: none;
+}
+
+.step:not(:last-child) {
+    border-bottom: 1px solid #39a6b2;
+  }
 
 .step-info {
     flex: 2 70%;
@@ -349,6 +394,7 @@ section {
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
+    border-radius: 10px;
 }
 
 .contact-form button {
@@ -359,7 +405,13 @@ section {
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
+    border-radius: 10px;
 }
+
+.contact-form button:hover {
+    color: #fce138;
+    background: #39a6b2;
+  }
 
 .contact-info p, .contact-info address {
     margin: 20px 0;
