final css touches

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,12 @@
     box-sizing: border-box;
 }
 
+:root {
+    --primary-color: #fce138;
+    --secondary-color: #024e76;
+    --tertiary-color: #39a6b2;
+  }
+
 body {
     /*more on this alphanumerical value in a minute! */
     color: #39a6b2;
