--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -336,10 +336,6 @@ section {
     flex: 1;
 }
 
-.trainer img {
-    width: 100%;
-}
-
 .trainer-bio {
     padding: 25px;
     line-height: 1.3;
@@ -355,6 +351,7 @@ section {
 
 .trainer-bio h3{
     font-size: 28px;
+    margin-bottom: 5px;
 }
 
 .trainer-bio h4 {
@@ -365,6 +362,46 @@ section {
 
 .trainer-bio p {
     font-size: 17px;
+}
+
+.trainer-img {
+    width: 100%;
+    min-height: 300px;
+    display: flex;
+    padding: 15px;
+    align-items: flex-end;
+}
+
+.trainer-1 {
+    background-image: url("../images/trainer-1.jpg");
+}
+
+.trainer-2 {
+    background-image: url("../images/trainer-2.jpg");
+}
+
+.trainer-3 {
+    background-image: url("../images/trainer-3.jpg");
+}
+
+.trainer-img::after {
+    content: "";
+    height: 100%;
+    width: 100%;
+    background: rgba(252, 225, 56, 0.3);
+    position: absolute;
+    top: auto;
+    left: auto;
+}
+
+.trainer-img h3 {
+    position: relative;
+    z-index: ;
+}
+  
+  .trainer-img h4 {
+    position: relative;
+    z-index: ;
 }
 
 /*trainers*/
