--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,12 @@ body {
     color: #39a6b2;
     font-family: Helvetica, Arial, sans-serif;}
 
+.flex-row {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+}
+
 /* apply styles to <header> */
 header {
     padding: 20px 35px;
@@ -331,7 +337,7 @@ section {
 }
 
 .trainer {
-    margin: 0 auto 30px auto;
+    margin: 0 auto 20px auto;
     background: #024e76;
     color: #fce138;
     flex: 1;
@@ -342,13 +348,13 @@ section {
     line-height: 1.3;
 }
 
-.text-left {
+/* .text-left {
     text-align: left;
 }
 
 .text-right {
     text-align: right;
-}
+} */
 
 .trainer-bio h3{
     font-size: 28px;
@@ -385,7 +391,7 @@ section {
     background-image: url("../images/trainer-3.jpg");
 }
 
-.trainer-img::after {
+/* .trainer-img::after {
     content: "";
     height: 100%;
     width: 100%;
@@ -393,14 +399,14 @@ section {
     position: absolute;
     top: auto;
     left: auto;
-}
+} */
 
 .trainer-img h3 {
     position: relative;
     z-index: 1;
 }
   
-  .trainer-img h4 {
+.trainer-img h4 {
     position: relative;
     z-index: 2;
 }
@@ -559,9 +565,7 @@ footer a {
 
 /*Footer end*/
 
-.flex-row {
-    display: flex;
-}
+
 
 /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
 @media screen and (max-width: 980px) {
